--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>I'm a Web Developer</h2>
     <hr>
 <h3>
-<a href="./Brithday/index.html">Birthday Invate Project</a>
+<a href="./Brithday/index.html">Birthday Invite Project</a>
     <img src="./brithday img.png" height="400" alt="">
 <a href="./Best Movies/index.html"> <p></p>
     My favourite movies</a>
